day9-kubernetes/ingress/ingress-https-multi-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-multi-https
  namespace: erp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - www.tomcatapp.com
    secretName: nginx-tls-secret
  - hosts:
    - mobile.tomcatapp.com
    secretName: mobile-tls-secret
  rules:
  - host: www.tomcatapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: erp-nginx-webapp-service
          servicePort: 80
  - host: mobile.tomcatapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: erp-tomcat-webapp-service
          servicePort: 80
